# way-cooler

./: .build.yml  .clang-format  .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  CMakeLists.txt  Cargo.toml  Contributing.md  ISSUE_TEMPLATE.md  LICENSE  README.html  README.md  awesome.c  awesomeConfig.cmake  bar_debug.txt  build.rs  ci.py  distribute.sh  globalconf.h  install.sh  makedocs.sh  makefile  meson.build  run-clang-format.py  style_guide.md  test_wayland.sh  todo.txt  way-cooler.desktop  ways-to-contribute.md
awesome/: Cargo.toml  build.rs  meson.build
awesome/src/: awesome.rs  client.rs  dbus.rs  drawin.rs  key.rs  keygrabber.rs  macros.rs  main.rs  mouse.rs  mousegrabber.rs  root.rs  screen.rs  wayland_glib_interface.c
awesome/src/common/: class.rs  object.rs  property.rs  signal.rs  xproperty.rs
awesome/src/lua/: config.rs  init_path.rs  mod.rs  rust_interop.rs  utils.rs
awesome/src/objects/: button.rs  client.rs  drawable.rs  drawin.rs  key.rs  mod.rs  mouse.rs  screen.rs  tag.rs
awesome/src/wayland_obj/: mod.rs  output.rs  wl_compositor.rs  wl_shm.rs  xdg_shell.rs
awesome/src/wayland_protocols/: mod.rs  xdg_shell.rs
changelog/: v0.3.2.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.7.0.md  v0.8.0.md
client/: .rustfmt.toml  Cargo.toml  build.rs  meson.build
client/src/: area.rs  awesome.rs  dbus.rs  keygrabber.rs  main.rs  mousegrabber.rs  root.rs  wayland_glib_interface.c
client/src/common/: class.rs  mod.rs  object.rs  property.rs  signal.rs  xproperty.rs
client/src/lua/: config.rs  mod.rs  utils.rs
client/src/objects/: button.rs  client.rs  drawable.rs  drawin.rs  key.rs  mod.rs  mouse.rs  screen.rs  tag.rs
client/src/wayland/: layer_shell.rs  mod.rs  mousegrabber.rs  wl_compositor.rs  wl_output.rs  wl_shm.rs
client/src/wayland_obj/: layer_shell.rs  mod.rs  mousegrabber.rs  output.rs  utils.rs  wl_compositor.rs  wl_output.rs  wl_shm.rs  xdg_shell.rs
common/: util.h
compositor/: cursor.c  cursor.h  input.c  input.h  keyboard.c  keyboard.h  layer_shell.c  layer_shell.h  main.c  meson.build  mousegrabber.c  mousegrabber.h  output.c  output.h  pointer.c  pointer.h  seat.c  seat.h  server.c  server.h  view.c  view.h  xdg.c  xdg.h  xwayland.c  xwayland.h
config/: config.lua  init.lua  rc.lua  utils.lua
docs/: ipc-command-socket.md  ipc-events-socket.md  ipc-protocol.md  way-cooler-protocol.md
docs/d-bus/: ActiveContainerId.md  ActiveWorkspace.md  CloseView.md  ContainerInActiveWorkspace.md  Debug.md  Focus.md  FocusDir.md  FullScreen.md  GrabAtCorner.md  LockScreen.md  MoveContainer.md  SendActiveToWorkspace.md  SendToWorkspace.md  SetActiveLayout.md  SetPointerPos.md  SpawnProgram.md  SplitContainer.md  SwitchWorkspace.md  ToggleCardinalTiling.md  ToggleFloat.md  ToggleFloatingFocus.md  layout.md  screen.md
docs/lua/: restart_startup_programs.md  spawn.md  spawn_at_startup.md  spawn_once.md  spawn_startup_programs.md  terminate_startup_programs.md
lib/lua/: .lua_init.lua.swp  awesome_init.lua  config.lua  init.lua  lua_init.lua  utils.lua
lib/test/: lua-bad-assert.lua  lua-exec-file.lua  lua-syntax-err.txt
manpages/: awesome.1.md  way-cooler.1.md
manpages/es/: awesome.1.md
manpages/fr/: awesome.1.md  way-cooler.1.md
protocols/: desktop-shell.xml  meson.build  way-cooler-mousegrabber-unstable-v1.xml  xdg-shell.xml
scripts/: build_static.sh  ci.py  debug_reproduce.py
src/: .main.rs.swp  background.rs  callbacks.rs  compositor.rs  keys.rs  macros.rs  main.rs  registry.rs  wayland_glib_interface.c
src/awesome/: awesome.rs  awful.rs  button.rs  class.rs  client.rs  convert.rs  drawable.rs  drawin.rs  key.rs  keygrabber.rs  mod.rs  mouse.rs  mousegrabber.rs  object.rs  property.rs  root.rs  screen.rs  signal.rs  tag.rs  xproperty.rs
src/awesome/lua/: init_path.rs  mod.rs  rust_interop.rs  thread.rs  types.rs  utils.rs
src/commands/: defaults.rs  mod.rs  tests.rs
src/compositor/: cursor.rs  mod.rs  seat.rs  view.rs  xwayland.rs
src/compositor/input/: input_manager.rs  keyboard.rs  mod.rs  pointer.rs
src/compositor/output/: mod.rs  output.rs  output_manager.rs
src/compositor/shells/: mod.rs  xdg_v6.rs
src/convert/: deserialize.rs  json.rs  mod.rs  serialize.rs
src/ipc/: channel.rs  command.rs  dbus_ipc.rs  dbus_message.rs  event.rs  keybindings.rs  layout.rs  macros.rs  mod.rs  pixels.rs  screen.rs  session.rs  tests.rs  utils.rs
src/ipc/interfaces/: layout.rs  mod.rs  screen.rs
src/ipc/tests/: channel.rs  (+3 more)
src/keys/: action.rs  event.rs  keypress.rs  mod.rs
src/layout/: .containers.rs.swp  Container  commands.rs  container.rs  containers.rs  functions.txt  graph_tree.rs  layout.rs  mod.rs  node.rs  old.rs  tests.rs  tree.rs  unsafetree.rs
src/lockscreen/: lockscreen.rs  mod.rs
src/lua/: convert.rs  events.rs  init.rs  init_path.rs  init_rust.rs  mod.rs  rust_interop.rs  tests.rs  thread.rs  types.rs  utils.rs
src/modes/: commands.rs  custom_lua.rs  default.rs  lock_screen.rs  mod.rs  mode.rs
src/registry/: category.rs  client.rs  commands.rs  mod.rs  permissions.rs  registry.rs  tests.rs  types.rs
src/render/: color.rs  draw.rs  mod.rs  renderable.rs  screen_scrape.rs
src/wayland/: desktop_shell.rs  gamma_control.rs  mod.rs
way-cooler/: Cargo.toml  build.rs  cursor.c  cursor.h  keybindings.c  keybindings.h  keyboard.c  layer_shell.c  layer_shell.h  main.c  makefile  meson.build  mousegrabber.c  mousegrabber.h  output.c  output.h  output_management.c  output_management.h  pointer.c  pointer.h  seat.c  server.c  server.h  view.c  xdg.c  xkb_hash_set.c  xkb_hash_set.h  xwayland.c
way-cooler/src/: cursor.rs  main.rs  seat.rs  view.rs  xwayland.rs
way-cooler/src/input/: input_manager.rs  keyboard.rs  mod.rs  pointer.rs
way-cooler/src/output/: mod.rs  output.rs  output_layout_manager.rs  output_manager.rs
way-cooler/src/shells/: mod.rs  xdg.rs  xdg_v6.rs
wayland/: drawable.c  drawin.c  globals.c  mouse.c  mouse.h  root.c  root.h  screen.c  screen.h
wayland/protocols/: way-cooler-mouse-unstable-v1.xml
x11/: event.c
(+55 files in other folders)
