[package]
name = "way-cooler"
description = "Customizeable Wayland compositor written in Rust"
version = "0.4.1"
repository = "https://github.com/Immington-Industries/way-cooler/"
keywords = ["Wayland", "compositor", "window", "manager", "wlc"]
readme = "README.md"
license = "MIT"
authors = ["Snirk Immington <snirk.immington@gmail.com>", "Timidger <apragmaticplace@gmail.com>"]

[dependencies]
rustwlc = { path = "../rust-wlc" } #"0.5.3"
lazy_static = "0.2"
log = "0.3"
env_logger = "0.3"
dbus = "0.4"
dbus-macros = "0.0.6"
hlua = "0.1"
bitflags = "0.7"
petgraph = "0.3"
rustc-serialize = "0.3"
json_macro = "0.1"
nix = "0.6"
uuid = { version = "0.3", features = ["v4", "rustc-serialize"]}
wayland-sys = { version = "^0.6.0", features = ["client", "dlopen"] }
getopts = "0.2"

[dev-dependencies]
dummy-rustwlc = "0.5.1"

[features]
static-wlc = ["rustwlc/static-wlc"]
