[package]
name = "awesome"
description = "Wayland compositor that emulates AwesomeWM"
version = "0.8.0"
repository = "https://github.com/way-cooler/way-cooler/"
keywords = ["Wayland", "compositor", "window", "manager", "wlroots", "awesome"]
readme = "README.md"
license = "MIT"
authors = ["Snirk Immington <snirk.immington@gmail.com>", "Timidger <apragmaticplace@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
wlroots = { path = "../wlroots-rs" }
lazy_static = "0.2"
log = "0.4"
env_logger = "0.5"
exec = "0.3"
rlua = { version = "0.12.0", default-features = false }
bitflags = "1.0"
nix = "0.6"
clap = "2"
cairo-rs = "0.4.1"
cairo-sys-rs = "0.6.0"
gdk-pixbuf = "0.4.*"
libc = "0.2.*"
glib = "0.5.0"
tempfile = "3.0.*"
xcb = { version = "0.8.1", features = ["xkb"] }
wayland-client = "0.20.12"
wayland-sys = "0.20.12"
# TODO Use point release once get get_no_reply and friends are released
dbus = { git = "https://github.com/diwic/dbus-rs" }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3.*"
wayland-scanner = "0.20.12"


[features]
disable-debug = []
builtin-lua= ["rlua/builtin-lua"]
