[package]
name = "way-cooler-client"
description = "Wayland client that emulates AwesomeWM"
version = "0.8.0"
repository = "https://github.com/way-cooler/way-cooler/"
keywords = ["Wayland"]
readme = "README.md"
license = "MIT"
authors = ["Timidger <apragmaticplace@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
lazy_static = "0.2"
log = "0.4"
env_logger = "0.5"
exec = "0.3"
rlua = { version = "0.16", default-features = false, features = ["system-lua"] }
bitflags = "1.0"
nix = "0.6"
clap = "2"
cairo-rs = "0.7.1"
cairo-sys-rs = "0.9.0"
gdk-pixbuf = "0.7.*"
libc = "0.2.*"
glib = "0.8.0"
tempfile = "3.0.*"
xcb = { version = "0.8.1", features = ["xkb"] }
wayland-commons = "0.23"
wayland-sys = { version = "0.23", features = [ "dlopen" ] }
wayland-client = { version = "0.23", features = [ "native_lib", "dlopen" ] }
wayland-protocols = { version = "0.23", features = [ 'client', "unstable_protocols" ] }
dbus = "0.6"
xkbcommon = "0.3"
evdev = "0.10"
enumflags2 = "0.5"
enumflags2_derive = "0.5"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3.*"
wayland-scanner = { version = "0.23" }


[features]
disable-debug = []
builtin-lua= ["rlua/builtin-lua"]
