[package]
name = "way-cooler"
description = "Wayland compositor that emulates AwesomeWM"
version = "0.8.0"
repository = "https://github.com/way-cooler/way-cooler/"
keywords = ["Wayland", "compositor", "window", "manager", "wlroots", "awesome"]
readme = "README.md"
license = "MIT"
authors = ["Snirk Immington <snirk.immington@gmail.com>", "Timidger <apragmaticplace@gmail.com>"]
build = "build.rs"
publish = false

[dependencies]
wlroots = { path = "../wlroots-rs" }
log = "0.4"
env_logger = "0.5"
bitflags = "0.7"
nix = "0.6"
getopts = "0.2"
xcb = { version = "0.8.1", features = ["xkb"] }
